--- a/lesson4-6/index.html
+++ b/lesson4-6/index.html
@@ -9,6 +9,6 @@
     <script async src="script.js"></script>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <input type="button" id="button" value="PushMe">
 </body>
 </html>
